refactor(): update productDto with auctionTime and refactor ModelMapperConfig